Create English site

--- a/eng_site.conf
+++ b/eng_site.conf
@@ -1,15 +1,15 @@
-<VirtualHost b.ueda.tech:80>
+<VirtualHost e.ueda.tech:80>
 	ServerAdmin ryuichiueda@gmail.com
-	DocumentRoot /var/www/ueda_blog2
-	<Directory /var/www/ueda_blog2>
+	DocumentRoot /var/www/eng_site
+	<Directory /var/www/eng_site>
 		Options -Indexes -FollowSymLinks +MultiViews +ExecCGI
 		AllowOverride None
 		Order allow,deny
 		Allow from all
 		AddHandler cgi-script .cgi
 	</Directory>
-	Alias /pages /var/www/ueda_blog2_contents/pages
-	Alias /posts /var/www/ueda_blog2_contents/posts
+	Alias /pages /var/www/eng_site_contents/pages
+	Alias /posts /var/www/eng_site_contents/posts
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
