--- a/uedalab.conf
+++ b/uedalab.conf
@@ -1,15 +1,15 @@
-<VirtualHost e.ueda.tech:80>
+<VirtualHost lab.ueda.tech:80>
 	ServerAdmin ryuichiueda@gmail.com
-	DocumentRoot /var/www/eng_site
-	<Directory /var/www/eng_site>
+	DocumentRoot /var/www/uedalab
+	<Directory /var/www/uedalab>
 		Options -Indexes -FollowSymLinks +MultiViews +ExecCGI
 		AllowOverride None
 		Order allow,deny
 		Allow from all
 		AddHandler cgi-script .cgi
 	</Directory>
-	Alias /pages /var/www/eng_site_contents/pages
-	Alias /posts /var/www/eng_site_contents/posts
+	Alias /pages /var/www/uedalab_contents/pages
+	Alias /posts /var/www/uedalab_contents/posts
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
